# clipwright

./: .gitattributes  .gitignore  CHANGELOG.md  CONVENTIONS.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
clipwright-bgm/: CHANGELOG.md  README.md  pyproject.toml
clipwright-bgm/src/clipwright_bgm/: bgm.py  schemas.py  server.py
clipwright-bgm/tests/: conftest.py  test_available_range.py  test_bgm.py  test_internal_guard.py  test_pathpolicy_bgm.py  test_schemas.py  test_server.py
clipwright-color/: CHANGELOG.md  README.md  pyproject.toml
clipwright-color/tests/: conftest.py  test_analyze.py  test_available_range.py  (+6 more)
clipwright-export/: README.md  pyproject.toml
clipwright-export/spikes/: adapter_probe.py
clipwright-export/src/clipwright_export/: chapters.py  schemas.py  server.py  timeline_export.py
clipwright-export/tests/: conftest.py  test_chapters.py  test_ffmetadata_mux.py  test_schemas.py  test_server.py  test_timeline_export.py  test_timeline_export_audio_tracks.py
clipwright-frames/: CHANGELOG.md  README.md  pyproject.toml
clipwright-loudness/: CHANGELOG.md  README.md  pyproject.toml
clipwright-noise/: CHANGELOG.md  README.md  pyproject.toml
clipwright-noise/src/clipwright_noise/: __init__.py  analyze.py  noise.py  schemas.py  server.py
clipwright-noise/tests/: conftest.py  test_analyze.py  test_available_range.py  test_e2e.py  test_internal_guard.py  test_noise.py  test_noise_nle.py  test_pathpolicy_noise.py  test_schemas.py  test_server.py
clipwright-overlay/: CHANGELOG.md  README.md  pyproject.toml
clipwright-reframe/: CHANGELOG.md  README.md  pyproject.toml
clipwright-reframe/src/clipwright_reframe/: __init__.py  reframe.py  schemas.py  server.py  track_cli.py
clipwright-reframe/tests/: conftest.py  test_available_range.py  test_internal_guard.py  test_pathpolicy_reframe.py  test_reframe.py  test_reframe_nle.py  test_schemas.py  test_track_cli.py
clipwright-render/: CHANGELOG.md  README.md  pyproject.toml
clipwright-render/src/clipwright_render/: __init__.py  encoders.py  plan.py  render.py  retiming.py  schemas.py  server.py
clipwright-render/tests/: conftest.py  test_bgm_relpath_regression.py  test_color_eq.py  test_color_grade.py  test_denoise.py  test_e2e_bgm.py  test_e2e_loudness.py  test_e2e_merge.py  test_e2e_subtitle.py  test_encoders.py  test_image_overlay.py  test_integration.py  test_internal_guard.py  test_karaoke_plan.py  test_karaoke_render.py  test_loudness.py  test_pathpolicy_render.py  test_pip_audio.py  test_pip_ducking_asplit.py  test_pip_ducking_integration.py  test_pip_ffmpeg_execution.py  test_pip_render_wiring.py  test_pip_video.py  test_pix_fmt.py  test_plan.py  test_plan_hw.py  test_plan_nle_relativize.py  test_reframe_filter.py  test_reframe_integration.py  test_reframe_track_contract.py  test_reframe_track_render.py  test_render.py  test_render_hw.py  test_render_nle_tc_ffmpeg.py  test_render_retiming.py  test_retiming.py  test_schemas.py  test_schemas_hw.py  test_server.py  test_stabilize.py  (+5 more)
clipwright-render/tests/spike/: test_spike_expr_len.py  test_spike_original_size.py
clipwright-scene/: CHANGELOG.md  README.md  pyproject.toml
clipwright-sequence/: CHANGELOG.md  README.md  pyproject.toml
clipwright-sequence/src/clipwright_sequence/: __init__.py  plan.py  schemas.py  sequence.py  server.py
clipwright-sequence/tests/: conftest.py  test_available_range.py  test_e2e_sequence.py  test_internal_guard.py  test_pathpolicy_sequence.py  test_plan.py  test_schemas.py  test_sequence.py  test_sequence_nle.py  test_server.py
clipwright-silence/: CHANGELOG.md  README.md  pyproject.toml
clipwright-silence/src/clipwright_silence/: __init__.py  detect.py  plan.py  schemas.py  server.py  vad_cli.py
clipwright-silence/tests/: conftest.py  test_available_range.py  test_cli_utf8.py  test_detect.py  test_detect_nle.py  test_detect_stderr_safe.py  test_e2e.py  test_internal_guard.py  test_pathpolicy_silence.py  test_plan.py  test_schemas.py  test_server.py  test_vad_cli.py
clipwright-speed/: CHANGELOG.md  README.md  pyproject.toml
clipwright-stabilize/: CHANGELOG.md  README.md  pyproject.toml
clipwright-stabilize/src/clipwright_stabilize/: analyze.py  schemas.py  server.py  stabilize.py
clipwright-stabilize/tests/: conftest.py  test_analyze.py  test_available_range.py  test_d6_motion.py  test_pathpolicy_stabilize.py  test_recommend.py  test_schemas.py  test_server.py  test_stabilize.py  test_stabilize_nle.py
clipwright-stabilize/tests/fixtures/: calm.stabilize.trf  linux_text_calm.stabilize.trf  linux_text_shaky.stabilize.trf  shaky.stabilize.trf
clipwright-text/: CHANGELOG.md  README.md  pyproject.toml
clipwright-text/src/clipwright_text/: __init__.py  schemas.py  server.py  text.py
clipwright-text/tests/: conftest.py  test_internal_guard.py  test_pathpolicy_text.py  test_schemas.py  test_server.py  test_text.py
clipwright-transcribe/: CHANGELOG.md  README.md  pyproject.toml
clipwright-transition/: CHANGELOG.md  README.md  pyproject.toml
clipwright-trim/: CHANGELOG.md  README.md  pyproject.toml
clipwright-wrap/: CHANGELOG.md  README.md  pyproject.toml
docs/: CONVENTIONS.draft.md  clipwright-spec.md  clipwright-spec2.md  clipwright-spec3.md  clipwright-spec4.md  clipwright-spec5.md  clipwright-spec6.md
scripts/: release.sh
spikes/: generate_golden_otio.py  nle_adapters_probe.py  nle_probe.py
templates/: README.md
templates/clipwright-tool/: README.md  pyproject.toml
templates/clipwright-tool/src/clipwright___TOOL__/: __TOOL__.py  __TOOL___cli.py  schemas.py  server.py
templates/clipwright-tool/tests/: conftest.py  test___TOOL__.py  test_schemas.py  test_server.py
tests/: conftest.py  test_cli_io.py  test_envelope.py  test_envelope_typed.py  test_errors.py  test_media.py  test_media_nle.py  test_nle_interop.py  test_operations.py  test_otio_utils.py  test_pathpolicy.py  test_process.py  test_project.py  test_schemas.py  test_server.py  test_server_mcp_boundary.py  test_subprocess_safe_message.py  test_template_subprocess_message.py
(+153 files in other folders)
