[project]
name = "clipwright"
version = "0.6.0"
description = "MCP server group wrapping FFmpeg/OTIO. Provides primitives to manipulate video editing workflows from AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.2",
    "opentimelineio>=0.18",
    "pydantic>=2",
]

[project.scripts]
clipwright-mcp = "clipwright.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 88
# templates/ is a template containing placeholders (__TOOL__ etc). Excluded from lint/format.
extend-exclude = ["templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"*/tests/**" = ["E501"]

[tool.ruff.format]
# Default ruff formatter is OK

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
# templates/ is a template containing placeholders. Excluded from type checking.
exclude = ["^templates/"]

# opentimelineio has no stubs, ignored with mypy strict
[[tool.mypy.overrides]]
module = "opentimelineio.*"
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
    "integration: integration test requiring actual ffmpeg/ffprobe binaries",
    "slow: test with long execution time",
]

# --- coverage ---
[tool.coverage.run]
source = ["clipwright"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# --- uv workspace ---
[tool.uv.workspace]
members = ["clipwright-bgm", "clipwright-color", "clipwright-frames", "clipwright-loudness", "clipwright-noise", "clipwright-overlay", "clipwright-reframe", "clipwright-render", "clipwright-scene", "clipwright-sequence", "clipwright-silence", "clipwright-speed", "clipwright-stabilize", "clipwright-text", "clipwright-transcribe", "clipwright-transition", "clipwright-trim", "clipwright-wrap"]
