[project]
name = "clipwright-export"
version = "0.1.0"
description = "MCP tools that export OTIO timelines to NLE exchange formats (EDL/FCPXML) and chapter sidecars (YouTube/ffmetadata)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "clipwright>=0.6.0",
    "mcp[cli]>=1.27.2",
    "opentimelineio>=0.18",
    "otio-cmx3600-adapter>=1.0",
    "otio-fcpx-xml-adapter>=1.0",
    "pydantic>=2",
]

[project.scripts]
clipwright-export = "clipwright_export.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

# Resolve clipwright (core) within workspace by path reference.
[tool.uv.sources]
clipwright = { workspace = true }

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow E501 for English docstrings/comments in test files
"tests/*.py" = ["E501"]

[tool.ruff.format]
# Default ruff formatter is OK

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

# opentimelineio has no stubs, ignored with mypy strict
[[tool.mypy.overrides]]
module = "opentimelineio.*"
ignore_missing_imports = true

# otio-cmx3600-adapter / otio-fcpx-xml-adapter have no stubs
[[tool.mypy.overrides]]
module = "otio_cmx3600_adapter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "otio_fcpx_xml_adapter.*"
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
    "integration: integration test requiring actual ffmpeg/ffprobe binaries",
    "slow: test with long execution time",
]

# --- coverage ---
[tool.coverage.run]
source = ["clipwright_export"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
