[project]
name = "clipwright-reframe"
version = "0.3.2"
description = "MCP tool for video reframing and OTIO timeline reframe annotation generation. Annotates a reframe directive (target resolution / fit mode / anchor) to timeline-level metadata for clipwright-render to apply."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "clipwright>=0.6.1",
    "mcp[cli]>=1.27.2",
    "pydantic>=2",
]

[project.scripts]
clipwright-reframe = "clipwright_reframe.server:main"

[project.optional-dependencies]
track = ["numpy>=1.24"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

[tool.uv.sources]
clipwright = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501", "SIM105", "F841", "I001"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "opentimelineio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clipwright_reframe.track_cli"
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
    "integration: integration test requiring actual ffmpeg/ffprobe binaries",
    "slow: test with long execution time",
    "e2e: e2e test using actual ffmpeg binary",
]

[tool.coverage.run]
source = ["clipwright_reframe"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
