[project]
name = "clipwright-render"
version = "0.8.0"
description = "MCP tool to realize OTIO timelines with FFmpeg. Completes segment extraction, concatenation, and trimming in a single transcode pass."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "clipwright>=0.2.0",
    "mcp[cli]>=1.27.2",
    "opentimelineio>=0.18",
    "pydantic>=2",
]

[project.scripts]
clipwright-render = "clipwright_render.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

# Resolve clipwright (core) within workspace by path reference
[tool.uv.sources]
clipwright = { workspace = true }

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow E501 for English docstrings/comments in test files (same rules as wrap/silence)
# F401: unused imports in test files are intentional (e.g. imported-for-side-effects,
#   or available-but-unused stubs used by test helpers).
# I001: test files use local inline imports for isolation; import order is intentional.
# C408: dict() calls in test helpers are acceptable for readability.
# SIM108: nested with statements in tests are intentional for clarity.
# SIM117: nested with statements in tests are intentional for clarity.
"tests/*.py" = ["E501", "F401", "I001", "C408", "SIM108", "SIM117", "B007"]

[tool.ruff.format]
# Default ruff formatter is OK

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

# opentimelineio has no stubs, ignored with mypy strict
[[tool.mypy.overrides]]
module = "opentimelineio.*"
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
    "integration: integration test requiring actual ffmpeg/ffprobe binaries",
    "slow: test with long execution time",
    "e2e: e2e test using actual ffmpeg binary (loudness normalization etc)",
]

# --- coverage ---
[tool.coverage.run]
source = ["clipwright_render"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
