[project]
name = "clipwright-text"
version = "0.2.2"
description = "MCP tool for adding text overlays to an OTIO timeline."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "clipwright>=0.6.0",
    "mcp[cli]>=1.27.2",
    "opentimelineio>=0.18",
    "pydantic>=2",
]

[project.scripts]
clipwright-text = "clipwright_text.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

[tool.uv.sources]
clipwright = { workspace = true }

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow E501 for English docstrings/comments in test files.
# Allow I001 for test files authored in Red phase (import order is not our change).
"tests/*.py" = ["E501", "I001"]

[tool.ruff.format]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "opentimelineio.*"
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
asyncio_mode = "strict"
markers = [
    "integration: integration test requiring actual ffmpeg/ffprobe binaries",
    "slow: test with long execution time",
]

# --- coverage ---
[tool.coverage.run]
source = ["clipwright_text"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
