[project]
# __TOOL__ を実ツール名（小文字・例: noise）に置換する。
name = "clipwright-__TOOL__"
version = "0.1.0"
description = "（TODO: このツールが何をするか1文で。例: 〜を検出して OTIO/JSON 注記を返す MCP ツール。）"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "satoh-y-0323", email = "shoma.papa.0323@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # 外部 OSS を subprocess で包む場合はここに通常依存として追加する（M4）。
    # 例: "budoux",
    "clipwright",
    "mcp[cli]>=1.27.2",
    "pydantic>=2",
]

[project.scripts]
# CLI コマンド名 = MCP サーバー起動エントリポイント（M1）。
clipwright-__TOOL__ = "clipwright___TOOL__.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

# workspace 内の clipwright (core) をパス参照で解決する。
[tool.uv.sources]
clipwright = { workspace = true }

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# テストファイルの日本語 docstring/コメントは E501 を許容する
"tests/*.py" = ["E501"]

[tool.ruff.format]
# ruff formatter のデフォルトで OK

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

# 外部 OSS にスタブが無い場合は override で ignore する（例）。
# [[tool.mypy.overrides]]
# module = "your_oss.*"
# ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
    "integration: ffmpeg/ffprobe 実バイナリを必要とする統合テスト",
    "slow: 実行時間が長いテスト",
]

# --- coverage ---
[tool.coverage.run]
source = ["clipwright___TOOL__"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
